set(CMAKE_CXX_FLAGS "-DLINUX")
add_library(pcap++Packet SHARED 
src/ArpLayer.cpp
src/DhcpLayer.cpp
src/DnsLayer.cpp
src/DnsResource.cpp
src/DnsResourceData.cpp
src/EthLayer.cpp
src/GreLayer.cpp
src/Gtpv1Layer.cpp
src/Gtpv2Layer.cpp
src/HttpLayer.cpp
src/IcmpLayer.cpp
src/IgmpLayer.cpp
src/IPReassembly.cpp
src/IPv4Layer.cpp
src/IPv6Extensions.cpp
src/IPv6Layer.cpp
src/Layer.cpp
src/MplsLayer.cpp
src/NullLoopbackLayer.cpp
src/Packet.cpp
src/PacketTrailerLayer.cpp
src/PacketUtils.cpp
src/PayloadLayer.cpp
src/PPPoELayer.cpp
src/RadiusLayer.cpp
src/RawPacket.cpp
src/SdpLayer.cpp
src/SipLayer.cpp
src/SllLayer.cpp
src/SSLHandshake.cpp
src/SSLLayer.cpp
src/StreamLayer.cpp
src/ArpCpuLayer.cpp
src/TcpLayer.cpp
src/TcpReassembly.cpp
src/TextBasedProtocol.cpp
src/TLVData.cpp
src/UdpLayer.cpp
src/VlanLayer.cpp
src/VxlanLayer.cpp
)
